js/js.translator/testData/incremental/invalidation/friendDependencyWithCrossModuleInliner/lib1/l1.1.kt
open class PublicClass {
    internal fun foo(): Int = 1
    internal val bar: Int = 1
    open internal fun baz(): Int = 3
}
